<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        tools:context="com.android.quire_android.com.naren.quire_android.ui.welcome.fragments.WelcomeFragment">

    <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/shopping"
            android:id="@+id/image_app"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="75dp"/>
    <TextView
            android:text="@string/welcome_swipe_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_welcome_subtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:textAlignment="center"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_subtitle"
            app:layout_constraintHorizontal_bias="0.502"/>
    <TextView
            android:text="@string/welcome_text_welcome_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_text_subtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome"
            android:textAlignment="center"
            android:padding="16dp"/>
    <TextView
            android:text="@string/welcome_text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/image_app"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.503"/>

</android.support.constraint.ConstraintLayout>
