<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/purse" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_seller_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/horizontalLines"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_product"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/image_seller_profile"
            android:maxLength="30"
            android:text="@string/nearby_text_product_name"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="@+id/text_product_name"
            android:layout_below="@+id/text_product_name"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/image_seller_profile"
            android:maxLength="20"
            android:text="@string/nearby_text_product_description"
            android:textColor="@color/grey_500"
            android:textSize="16sp" />

        <View
            android:id="@+id/horizontalLines"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/text_product_description"
            android:layout_marginTop="10dp"
            android:background="@color/grey_300" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nearby_text_product_price"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>