<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/grey_100"
            android:elevation="2dp"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ToolbarDotsColor"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/listings_text_toolbar"
                  android:textSize="18sp"
                  android:textColor="@color/black"
                  android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_profile"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_pic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.501"/>
    <TextView
            android:text="@string/dummy_text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fullname"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/image_profile"
            android:textSize="18sp"
            android:textColor="@color/black" android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
            android:id="@+id/image_one"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/ic_file_upload_grey_400_24dp"
            android:visibility="visible"
            android:onClick="onClick"
            android:layout_alignParentEnd="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintTop_toBottomOf="@+id/text_fullname"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_400"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/image_one"
            android:id="@+id/view2"/>

    <Button
            android:id="@+id/button_list_new_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:padding="16dp"
            android:text="@string/profile_button_new_item"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            android:onClick="onClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginRight="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintVertical_bias="0.501"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:id="@+id/recyclerView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"/>
</android.support.constraint.ConstraintLayout>